tests/spec/core_functions/color/change_color/error/test_type.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/change_color/error/type.hrx"

// Ignoring "alpha", error tests are not supported yet.

// Ignoring "blackness", error tests are not supported yet.

// Ignoring "blue", error tests are not supported yet.

// Ignoring "color", error tests are not supported yet.

// Ignoring "green", error tests are not supported yet.

// Ignoring "hue", error tests are not supported yet.

// Ignoring "lightness", error tests are not supported yet.

// Ignoring "red", error tests are not supported yet.

// Ignoring "saturation", error tests are not supported yet.

// Ignoring "whiteness", error tests are not supported yet.
